--- a/src/Compnent/Body/Column/column.css
+++ b/src/Compnent/Body/Column/column.css
@@ -1,6 +1,6 @@
 .column-container {
   height: 500px;
-  width: 500px;
+  width: 470px;
   background-color: rgb(51, 51, 51);
   margin-top: 10px;
   padding: 10px 0px;
@@ -48,5 +48,6 @@
 @media only screen and (max-width: 768px) {
   .column-container {
     width: 100%;
+    margin-top: 25px;
   }
 }
