--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,5 @@
-body{
-    margin: 0;
-    font-family: 'BioRhyme', serif;
+body {
+  margin: 0;
+  width: 99vw;
+  font-family: "BioRhyme", serif;
 }
